--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(cpplox)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(cpplox main.cpp chunk.h debug.h)
+add_executable(cpplox main.cpp chunk.h debug.h value.h)
